fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,11 @@
-body {
-    margin: 0;
-    overflow: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
 html, body, .App {
     width: 100vw;
     height: 100vh;
     background: #141414;
+    overflow: hidden;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .App {
